[package]
name = "os-rs"
version = "0.1.0"
authors = ["yjhmelody <yjh465402634@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

# we abort when panic
[profile.dev]
panic = "abort"

# we abort when panic
[profile.release]
panic = "abort"

