[package]
name = "os-rs"
version = "0.1.0"
authors = ["yjhmelody <yjh465402634@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bit_field = "0.10.0"
spin = "0.5.2"

# we abort when panic
[profile.dev]
panic = "abort"

# we abort when panic
[profile.release]
panic = "abort"
